feat(admin): Implement admin authentication, RLS policies, and article management infrastructure
- Add role-based access control with admin user authentication in middleware
- Implement Row Level Security (RLS) policies for database tables with admin role validation
- Create admin user setup scripts and Supabase migrations for user roles and permissions
- Add comprehensive test suite for RLS policies and admin access validation
- Create detailed documentation for admin setup, testing, and implementation roadmap
- Add test environment configuration with example credentials
- Update database schema to support user roles and admin functionality
- Establish foundation for admin dashboard and article management features

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,16 @@ yarn-error.log*
 .env
 .env*.local
 
+# Admin credentials (NEVER commit these!)
+*credentials*.txt
+*credentials*.md
+*password*.txt
+*admin-access*.txt
+ADMIN_CREDENTIALS.md
+admin-credentials.md
+credentials.json
+.credentials
+
 # Vercel
 .vercel
 
